[package]
name = "gpwg"
version = "1.2.0"
description = "A good password generator"
authors = ["Frédéric van der Essen"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["password", "cryptography"]
categories = ["command-line-utilities", "cryptography"]
homepage = "https://github.com/fvdsn/gpwg"
repository = "https://github.com/fvdsn/gpwg"
readme = "README.md"

[[bin]]
name = "gpwg"
test = true
bench = false

[dependencies]
rand = "0.8.0"
zxcvbn = "2"
clap = { version = "3.1.6", features = ["derive"] }
cli-clipboard = "0.3.0"
ctrlc = "3.2.1"

